<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".TakeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:id="@+id/btnBack"
            android:contentDescription="@string/navigate_to_the_previous_screen"
            android:background="@drawable/baseline_arrow_circle_left_24"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:text="@string/ambil_sampah"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/green2"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:text="@string/alert_ambilbarang"
                android:textColor="#5D4037"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/baseline_priority_high_24" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/nama_pengguna_ambilsampah"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/namaPengguna"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:autofillHints="False"
                android:hint="@string/hint_username_ambilsampah"
                android:textColorHint="#808080"
                android:minHeight="48dp"
                android:inputType="text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:text="@string/kategori_sampah"/>

            <Spinner
                android:id="@+id/kategorisampah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:entries="@array/kategori_sampah"
                android:minHeight="48dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/berat_kg"/>

                    <EditText
                        android:id="@+id/beratsampah"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_2_kg"
                        android:textColorHint="#808080"
                        android:minHeight="48dp"
                        android:inputType="number"
                        android:autofillHints="no"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/harga_kg"/>

                    <EditText
                        android:id="@+id/hargaSampah"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_rp_1_000"
                        android:textColorHint="#808080"
                        android:minHeight="48dp"
                        android:inputType="number"/>

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/alamat"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"/>

            <EditText
                android:id="@+id/alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/masukkan_alamat"
                android:textColorHint="#808080"
                android:minHeight="48dp"
                android:importantForAutofill="no"
                android:inputType="text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/catatan_opsional"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/textNote"
                android:hint="@string/masukkan_catatan"
                android:textColorHint="#808080"
                android:minHeight="48dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/green2"
                android:textColor="@color/white"
                android:id="@+id/btnKirim"
                android:text="@string/kirim"
                android:textSize="17sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>