<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DaftarSampahActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:elevation="5dp"
            android:id="@+id/backMain"
            android:contentDescription="@string/navigate_to_the_previous_screen"
            android:background="@drawable/baseline_arrow_circle_left_24"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:text="@string/jenis_jenis_sampah"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:lineSpacingExtra="5dp"
        android:justificationMode="inter_word"
        android:text="@string/deskripsi_jenis"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:lineSpacingExtra="5dp"
        android:justificationMode="inter_word"
        android:text="@string/anorganik"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:lineSpacingExtra="5dp"
        android:justificationMode="inter_word"
        android:text="@string/organik"
        android:textColor="@color/black"
        android:textSize="14sp" />
</LinearLayout>