<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background_vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hello !!!"
        android:id="@+id/helloworld"
        android:textSize="36sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="30dp"
            android:background="#32FFFFFF">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="REGISTER"
                android:id="@+id/RegisterText"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/green2"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/emailReg"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="@string/email"
                android:textColorHint="#808080"
                android:drawableStart="@drawable/baseline_mail_outline_24"
                android:textColor="@color/black"
                android:drawablePadding="8dp"
                android:importantForAutofill="yes"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/passwordReg"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="@string/hint_login_password"
                android:textColorHint="#808080"
                android:drawableStart="@drawable/outline_lock_24"
                android:textColor="@color/black"
                android:drawablePadding="8dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/confirmPassReg"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="@string/confirm_password"
                android:textColorHint="#808080"
                android:drawableStart="@drawable/outline_lock_24"
                android:textColor="@color/black"
                android:drawablePadding="8dp"/>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/registerbtn"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/green2"
                app:cornerRadius = "20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnLoginPg"
                android:text="@string/login"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/green2"
                android:layout_marginTop="10dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>