<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background_vertical"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Welcome !!!"
        android:id="@+id/helloworld"
        android:textSize="36sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/black" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="30dp"
            android:background="#32FFFFFF">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_title"
                android:id="@+id/loginText"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/green2"/>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emailLayout"
                android:hint="@string/hint_login_email"
                android:layout_marginTop="40dp"
                app:boxStrokeColor="@android:color/transparent"
                app:boxStrokeWidthFocused="0dp"
                app:hintTextColor="@color/green2"
                app:hintAnimationEnabled="false"
                app:boxBackgroundMode="none"
                app:hintEnabled="true"
                app:hintTextAppearance="@style/TextLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/emailLog"
                    android:background="@drawable/custom_edittext"
                    android:padding="8dp"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/green2"
                    app:hintTextColor="@color/green2"
                    android:drawableStart="@drawable/baseline_person_outline_24"
                    android:drawablePadding="8dp"
                    android:importantForAutofill="yes" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/passwordLayout"
                app:passwordToggleEnabled="true"
                app:passwordToggleDrawable="@drawable/password_toggle_selector"
                app:boxStrokeColor="@android:color/transparent"
                app:boxStrokeWidthFocused="0dp"
                app:boxBackgroundMode="none"
                android:layout_marginTop="20dp"
                app:hintAnimationEnabled="false"
                android:hint="@string/hint_login_password"
                app:hintTextColor="@color/green2"
                android:textColorHint="#808080"
                android:drawableStart="@drawable/outline_lock_24"
                android:textColor="@color/green2"
                android:drawablePadding="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/passwordLog"
                android:background="@drawable/custom_edittext"
                android:padding="8dp"
                android:inputType="textPassword"
                android:textColorHint="#808080"
                app:hintTextColor="@color/green2"
                android:drawableStart="@drawable/outline_lock_24"
                android:drawablePadding="8dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/login"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/green2"
                app:cornerRadius = "20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnRegister"
                android:text="@string/btn_login_register"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/green2"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnLupaPass"
                android:text="@string/lupa_password"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/green2"
                android:layout_marginTop="10dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>